﻿        ***************************************************************
        *                                                             *
        *  Changes and Developments in the ShinyItemAnalysis Package  *
        *                                                             *
        ***************************************************************

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-7. (2019-04-19) -
-------------------------------------------------------

BUG FIXING
  o Busy indicator now properly displays above input tabs.

MAJOR UPDATES
  o New ordinal toy dataset SCIENCE was added. 


-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-6. (2019-04-18) -
-------------------------------------------------------

MAJOR UPDATES
  o Adjacent logistic regression model was implemented for ordinal data.
  o Both adjacent and cummulative regression models allow for selection
    of matching criterion (total score, standardized total score) and
    parametrization (classical slope/intercept and IRT parametrization).

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-5. (2019-04-03) -
-------------------------------------------------------

BUG FIXING
  o SD in Regression section was changed to SE.
  o Keep missing values button is now functioning and it is applied
    for ordinal and binary data.

MAJOR UPDATES
  o Cumulative logistic regression model was implemented for ordinal data.
  o Delta method is now applied for calculation of SE in IRT parametrization
    in cumulative logistic regression.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-4. (2019-03-28) -
-------------------------------------------------------

BUG FIXING
  o Bug in slider in histogram of total scores was fixed. Range is now
    correctly displayed when NA values are present.
  o Fixing versions.
