@@ -83,7 +83,7 @@ DistractorAnalysis <-  function(data, key, p.table = FALSE, num.groups = 3, matc
     score.level <- quantile(scores, seq(0, 1, by = 1/num.groups), na.rm = T)
     while (length(unique(score.level)) <= num.groups){
       num.groups <- num.groups - 1
-      score.level <- quantile(matching, seq(0, 1, by = 1/num.groups), na.rm = T)
+      score.level <- quantile(scores, seq(0, 1, by = 1/num.groups), na.rm = T)
     }
     score.level <- cut(scores, score.level, include.lowest = TRUE,
                        labels = paste("Group", 1:num.groups, sep = " "))
