@@ -1,0 +1,9 @@
+$(document).ready(function () {
+
+  $( "ul.dropdown-menu > li" ).click(function() {
+
+    $(window).scrollTop(0);
+
+  });
+
+});
